# Quantitative_Pratice

./: Black_scholes_working.py  Mental_math_tester.py  Pair trade tester.py  README.md  Stock data analysis.py  black.py  main.py  pair_trader.py  pyproject.toml
Bubble_indicator/: IV_skew.py  bubble_summary.csv  daily_IV_skew_snapshot.csv
ML_projects/: Tester_ML.py  crypto_analysis_demo.py  quick_test.py  setup_qdrant.py  setup_top50_crypto.py
Pairs_trading_tools/: main.py  pair_trader.py  pair_trader_v2_test.py
Poker_timer/: Timer.py  Timer_v2.html
Rotman_code/: Opt_position_closer.py  position_closer.py  position_closer_adv.py
Stock_pred/: arima_models.py  garch_model.py  main.py  model_results.csv  model_summary.csv
Stock_pred/ticker_results/: AAPL.csv  GOOGL.csv  MSFT.csv
qdrant_storage/: raft_state.json
qdrant_storage/collections/crypto_data/0/: replica_state.json
qdrant_storage/collections/crypto_data/0/segments/321a9192-862f-4aca-90fc-04f0f12d6809/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/crypto_data/0/segments/749ba905-753c-43e9-85c8-2d3f85e3fe23/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/crypto_data/0/segments/822d7d84-7e5a-4935-b960-d89277ffd262/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/crypto_data/0/segments/82fc2872-8099-4669-a7f2-2ca88e29c2c9/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/crypto_data/0/segments/be995c90-f40d-4bf3-afc5-3f181b85873e/payload_index/: IDENTITY  LOG  MANIFEST-000005
(+3 files in other folders)
