[project]
name = "quantitative-pratice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gs-quant>=1.4.17",
    "jax>=0.7.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.65",
    "arch>=6.0",
    "statsmodels>=0.14.1",
]

